[package]
name = "mdbook-insigno"
version = "0.0.1"
authors = ["Odin Hultgren Van Der Horst (Miniwoffer) <odinhorst@hotmail.com>"]
edition = "2018"

[[bin]]
name = "mdbook-insigno"
path = "src/bin/mdbook-insigno.rs"
doc = false

[dependencies]
mdbook = "^0.3.7"
serde_json = "^1.0"
clap = "^2.24"
regex = "^1"
